--- a/src/App.css
+++ b/src/App.css
@@ -415,3 +415,47 @@ input:-webkit-autofill:active {
   font-size: 7vh;
   color: #0077b6;
 }
+.div-progress {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10%;
+  border-radius: 17px;
+  background-color: #90e0ef;
+  padding: 30px;
+  width: fit-content;
+  color: white;
+  z-index: -1;
+}
+.div-single-progress {
+  border-radius: 17px;
+  background-color: #52b69a;
+  margin: 2vw;
+  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.txt-naziv-vezbanja,
+.txt-nivo-vezbanja,
+.txt-odnos-odgovora,
+.txt-datum-vezbanja {
+  font-size: 2vh;
+  width: fit-content;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+.div-naziv-vezbanja,
+.div-nivo-vezbanja,
+.div-progress-vezbanje,
+.div-odnos-odgovora,
+.div-datum-vezbanja {
+  margin-bottom: auto;
+  margin-top: auto;
+  margin-left: 20px;
+  margin-right: 20px;
+  height: fit-content;
+  text-align: center;
+}
+.div-progress-vezbanje {
+  margin-right: 0px;
+}
