--- a/src/App.css
+++ b/src/App.css
@@ -459,3 +459,103 @@ input:-webkit-autofill:active {
 .div-progress-vezbanje {
   margin-right: 0px;
 }
+.div-vezbanje-prevoda {
+  height: fit-content;
+  text-align: center;
+  width: 30%;
+  max-width: 600px;
+  min-width: 300px;
+  position: absolute;
+  left: 50%;
+  top: 45%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  padding-bottom: 10px;
+}
+.btn-prevod {
+  margin: 10px;
+  display: inline;
+  color: white;
+  background-color: #76c893;
+  border-style: none;
+  border-radius: 22px;
+  padding: 10px;
+  padding: 10px;
+}
+.btn-prevod:hover {
+  color: #0077b6;
+}
+.txt-vezbanje-prevoda {
+  margin-bottom: 20vh;
+  font-size: 4vh;
+}
+.rec-vezbanje-prevoda {
+  margin-bottom: 15vh;
+}
+.div-exit-vezbanje-prevod {
+  position: absolute;
+  left: 50%;
+  top: 85%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.button-exit-vezbanje-prevod {
+  background: transparent;
+  border-style: none;
+  font-size: 3vh;
+  color: #0077b6;
+}
+.txt-tacan-prevod {
+  color: red;
+  display: none;
+}
+.div-moj-nalog {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10%;
+  width: 40%;
+  background-color: #76c893;
+  border-radius: 20px;
+  padding: 20px;
+  color: white;
+}
+.txt-moj-nalog {
+  font-size: 30px;
+  margin-bottom: 40px;
+  color: white;
+}
+.btn-promena-lozinke {
+  background-color: transparent;
+  border-style: none;
+  font-size: 20px;
+  color: white;
+}
+.btn-brisanje-naloga {
+  background-color: transparent;
+  border-style: none;
+  font-size: 20px;
+  color: white;
+}
+.input-password-old,
+.input-password-new,
+.input-password-new-repeat {
+  border-top-style: hidden;
+  border-left-style: hidden;
+  border-right-style: hidden;
+  border-width: 1.5px;
+  background-color: transparent;
+  width: 50%;
+  outline: none;
+}
+.btn-promena-lozinke-action {
+  border-radius: 17px;
+  background-color: #168aad;
+  border-style: none;
+  padding: 10px;
+  color: white;
+}
+.div-promena-lozinke {
+  display: none;
+}
